--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -13,3 +13,7 @@
 body {
   margin: 0;
 }
+
+html {
+  overflow-x: hidden;
+}
